hff/hff_v1_Service_minecraft.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  namespace: hff
spec:
  ports:
  - name: minecraft
    port: 25565
    protocol: TCP
    targetPort: 25565
  selector:
    app: minecraft
  type: LoadBalancer
