hff/hff_cilium.io-v2_CiliumNetworkPolicy_allow-ingress-to-minecraft.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-to-minecraft
  namespace: hff
spec:
  endpointSelector:
    matchLabels:
      app: minecraft
  ingress:
  - fromEntities:
    - all
